code/style hacks to resolve rendering issues with Flying Saucer PDF engine, reguarding unknown breaks in words, mid page break hint blocks, and smaller code block font

--- a/includes/styles.css
+++ b/includes/styles.css
@@ -9,14 +9,14 @@
 		content: counter(page) " of "counter(pages);
 		font-family: Arial, sans-serif;
 		color: #999;
-		font-size: 14px;
+		font-size: 12px;
 	}
 
 	@bottom-left {
 		content: element(pageTitle);
 		font-family: Arial, sans-serif;
 		color: #999;
-		font-size: 14px;
+		font-size: 12px;
 	}
 
 }
@@ -34,6 +34,8 @@
 
 #pageTitle {
 	position: running(pageTitle);
+	color: #999;
+	font-size: 12px;
 }
 
 
@@ -286,11 +288,11 @@ li p {
 pre {
 	font-family: "Source Code Pro", monospace;
 	margin: 0;
-	font-size: 13px;
+	font-size: 11px;
 	background: transparent;
-	font-weight: bold;
 	white-space: pre-wrap;
 	word-wrap: break-word;
+	line-height: 1.3;
 }
 
 /* li {
@@ -370,10 +372,22 @@ span.lineno {
 
 .hint {
 	background-color: #f5f7f9;
-	margin: 0 0 12px;
-	padding: 7px;
+	margin: 12px 0 12px 0;
+	padding: 7px 7px 7px 50px;
 	border-left: 4px solid #26cb7c;
 	border-radius: 4px 0 0 4px;
+	box-decoration-break: clone;
+	background-repeat: no-repeat;
+	background-size: 27px;
+	background-position: 10px center;
+	vertical-align: middle;
+
+}
+
+.hint p {
+	widows: 1;
+	orphans: 1;
+	margin: auto;
 }
 
 /* .hint table,
